@@ -2024,7 +2024,7 @@
   },
   {
     "id": 69,
-    "animationId": 0,
+    "animationId": 41,
     "consumable": true,
     "damage": {
       "critical": false,
@@ -2033,15 +2033,22 @@
       "type": 0,
       "variance": 20
     },
-    "description": "",
-    "effects": [],
+    "description": "Good bones and calcium!",
+    "effects": [
+      {
+        "code": 11,
+        "dataId": 0,
+        "value1": 0.1,
+        "value2": 0
+      }
+    ],
     "hitType": 0,
-    "iconIndex": 0,
+    "iconIndex": 2082,
     "itypeId": 1,
-    "name": "",
-    "note": "Was once the Disposable Hammer.",
+    "name": "Milk",
+    "note": "<Menu Category: Foodstuffs>\n\n<Custom Show Eval>\nvisible = !$gameTemp.bagOrganized();\n</Custom Show Eval>\n\nWas once the Disposable Hammer.",
     "occasion": 0,
-    "price": 0,
+    "price": 20,
     "repeats": 1,
     "scope": 7,
     "speed": 0,
