@@ -49,7 +49,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 120 new items:
+ - 121 new items:
   ~ 19 recovery/buff items:
    > Yellow Salve
    > Blueberry Sizzle
@@ -69,9 +69,10 @@ Additions:
    > Earl's Takeout
    > Medicated Eyedrops
    > Fire Resistance Potion
-  ~ 8 foodstuffs:
+  ~ 9 foodstuffs:
    > Olive Oil
    > Tomato
+   > Milk
    > Dragonfruit
    > Starfruit
    > Processed Oats
